--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "discord.js": "11.3.2",
-    "express": "*"
+    "express": "*",
+    "better-sqlite3": "*"
   }
 }
