--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "request": "^2.85.0",
     "text2png": "*",
     "pretty-ms": "*",
-    "canvas-prebuilt": "*"
+    "canvas-prebuilt": "*",
+    "canvas": "*"
   }
 }
